<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">


    <LinearLayout
        android:layout_width="584dp"
        android:layout_height="815dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="431dp">

                <ImageButton
                    android:id="@+id/btnrecordon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_main_img"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/recordbigon" />

                <ImageButton
                    android:id="@+id/btnrecordbig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_main_img"
                    app:srcCompat="@drawable/recordbig" />
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="591dp">

            <ImageView
                android:id="@+id/imgmessagerec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_mic"
                android:visibility="invisible"
                app:srcCompat="@drawable/msgrecording" />

            <ImageView
                android:id="@+id/imgmessagesaving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_mic"
                android:visibility="invisible"
                app:srcCompat="@drawable/savingmessage" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="591dp">
            </android.support.constraint.ConstraintLayout>

            <ImageButton
                android:id="@+id/btnstop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_stop"
                app:srcCompat="@drawable/stoprec" />
        </LinearLayout>


    </LinearLayout>




</android.support.constraint.ConstraintLayout>